styles/components/_sticky_cta.scss
.sticky-cta {
  margin-left: -$gap * 4;

  @include media($medium-screen) {
    margin-left: -$gap * 5;
    margin-right: -$gap * 3;
  }
}

.sticky-cta.js-is-sticky {
  width: 80.8%;
}

.sticky-cta-container {
  display: flex;
  align-items: center;

  background-color: $color-gray-lightest;
  border-top: 1px solid $color-gray-lighter;
  border-bottom: 1px solid $color-gray-lighter;
  padding: 0 $gap * 2 0 $gap * 5;
  box-shadow: $box-shadow;

  a {
    margin: $gap $gap * 1.5 $gap 0;
    width: 19rem;
    height: 3.2rem;
    font-size: $small-font-size;
  }
}

.sticky-cta-text {
  flex-grow: 1;
}

.sticky-cta-buttons {
  display: flex;
}

